<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mingle</string>
    <string name="title_activity_activity_home">ActivityHome</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Feedback</string>
    <string name="cycle">Hire a Bicycle</string>
    <!--//HIRE A BICYCLE STRINGS-->
    <string name="cycledate">Date:</string>
    <string name="cycletime">Time:</string>
    <string name="cyclerequest">Send Request</string>
    <string name="reqcycletime">Enter Time</string>
    <string name="reqcycledate">Enter Date</string>
    <string name="sreq">Send Request</string>
    <!--//SHARE A TRAVEL STRINGS-->
    <string name="src">Source</string>
    <string name="esrc">Enter Source</string>
    <string name="dest">Destination</string>
    <string name="edest">Enter Destination</string>
    <string name="trav">Available Travels:</string>
    <string name="notrav">No Travels Found</string>
    <string name="tav">Yes</string>
    <string name="createtrav">Create Travel</string>
    <string name="btn_logout_from_google">Switch Account</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_kunal">Kunal boss</string>
</resources>
